[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/ChestIcon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StrengthProgress.gd" type="Script" id=2]
[ext_resource path="res://Fonts/VerySmallText.tres" type="DynamicFont" id=3]

[node name="StrengthProgress" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -30.0
margin_right = 65.0
margin_bottom = 30.0
rect_min_size = Vector2( 130, 28 )
alignment = 1

[node name="Texture_Muscle" type="TextureRect" parent="HBoxContainer"]
margin_right = 28.0
margin_bottom = 60.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Button_Milestones" type="Button" parent="HBoxContainer/Texture_Muscle"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 32.0
margin_right = 130.0
margin_bottom = 60.0
size_flags_horizontal = 3
alignment = 1

[node name="Label_Muscle" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 3 )
text = "Chest"
align = 1
valign = 1

[node name="Label_Level" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 98.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
text = "Level 1"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 98.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 14 )
step = 1.0

[connection signal="pressed" from="HBoxContainer/Texture_Muscle/Button_Milestones" to="." method="_on_Button_Milestones_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/ProgressBar" to="." method="_on_ProgressBar_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/ProgressBar" to="." method="_on_ProgressBar_mouse_exited"]
